--- a/01. PARTIE LEGISLATIVE/Article L1112-2 - 23086461.md
+++ b/01. PARTIE LEGISLATIVE/Article L1112-2 - 23086461.md
@@ -1,9 +1,10 @@
 # Article L1112-2
 
-I. ― Un schéma directeur d'accessibilité des services fixe la programmation de la mise en accessibilité des services de
-transport et les modalités de l'accessibilité des différents types de transport. 
+I.-Pour les services de transport ne relevant pas des services de transport librement organisés prévus aux articles L.
+3111-17 et suivants, un schéma directeur d'accessibilité des services fixe la programmation de la mise en accessibilité des
+services de transport et les modalités de l'accessibilité des différents types de transport. 
 
-II. ― Il est élaboré, pour les services dont ils sont responsables : 
+II.-Il est élaboré, pour les services dont ils sont responsables : 
 
 1° Par les autorités organisatrices des transports publics compétentes et, en l'absence d'autorité organisatrice, par
 l'Etat ; 
@@ -13,18 +14,19 @@ de l'importance de leur trafic, par les gestionnaires des gares maritimes.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2005-102 du 11 février 2005 - art. 45 (M), alinéas 3 et 4, paragraphe I
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
 
 	**Cite**:
 
-	  - Code général des impôts, CGI. - art. 1609 quatervicies A (V)
+	  - Code général des impôts, CGI. - art. 1609 quatervicies A
+	  - Code des transports - art. L3111-17 (V)
 
 	**Cité par**:
 
 	  - Code des transports - art. L1112-10 (VD)
-	  - Code des transports - art. L1112-2-1 (M)
+	  - Code des transports - art. L1112-2-1 (V)
 	  - Code des transports - art. L1112-5 (VD)
 	  - Code des transports - art. R1112-18 (V)
 
