--- a/01. PARTIE LEGISLATIVE/Article L1112-2-1 - 29507763.md
+++ b/01. PARTIE LEGISLATIVE/Article L1112-2-1 - 29507763.md
@@ -1,10 +1,11 @@
 # Article L1112-2-1
 
-I. - Il peut être élaboré un schéma directeur d'accessibilité-agenda d'accessibilité programmée. Cet agenda comporte une
-analyse des actions nécessaires à la mise en accessibilité de ce service et prévoit les modalités et la programmation de la
-réalisation de ces actions ainsi que le financement correspondant. Il précise les points d'arrêt identifiés comme
-prioritaires, les dérogations sollicitées en cas d'impossibilité technique avérée mentionnée à l'article L. 1112-4 et les
-mesures de substitution prévues dans ces derniers cas. 
+I.-Pour les services de transport ne relevant pas des services de transport librement organisés prévus aux articles L.
+3111-17 et suivants, il peut être élaboré un schéma directeur d'accessibilité-agenda d'accessibilité programmée. Cet agenda
+comporte une analyse des actions nécessaires à la mise en accessibilité de ce service et prévoit les modalités et la
+programmation de la réalisation de ces actions ainsi que le financement correspondant. Il précise les points d'arrêt
+identifiés comme prioritaires, les dérogations sollicitées en cas d'impossibilité technique avérée mentionnée à l'article L.
+1112-4 et les mesures de substitution prévues dans ces derniers cas. 
 
 Pour les services de transport ferroviaire, le schéma directeur d'accessibilité-agenda d'accessibilité programmée inclut
 également, au titre des obligations d'accessibilité prévues aux deux premiers alinéas de l'article L. 111-7-3 du code de la
@@ -29,7 +30,7 @@ organisatrice de transport ou, en l'absence d'une telle autorité, l'Etat, le ca
 d'accessibilité prévu à l'article L. 1112-2 s'il existe. Il se substitue alors à ce schéma directeur d'accessibilité des
 services de transport. 
 
-II. - Dans le cas où la mise en accessibilité d'un service de transport nécessite le concours de plusieurs personnes morales,
+II.-Dans le cas où la mise en accessibilité d'un service de transport nécessite le concours de plusieurs personnes morales,
 le schéma directeur précise les engagements de chacune de ces personnes en ce qui concerne le service de transport et
 l'infrastructure. 
 
@@ -46,8 +47,8 @@ file.
 Le schéma directeur d'accessibilité-agenda d'accessibilité programmée comporte les engagements, notamment financiers, de
 toutes les personnes morales contribuant à sa réalisation ou à son financement. Il est signé par ces personnes. 
 
-III. - Dans un délai de cinq mois après son dépôt, le représentant de l'Etat dans le département se prononce, après avis
-conforme  de la commission départementale consultative de la protection civile, de la sécurité et de l'accessibilité, sur la
+III.-Dans un délai de cinq mois après son dépôt, le représentant de l'Etat dans le département se prononce, après avis
+conforme de la commission départementale consultative de la protection civile, de la sécurité et de l'accessibilité, sur la
 validation du schéma directeur d'accessibilité-agenda d'accessibilité programmée ne concernant pas les services de transport
 ferroviaire d'intérêt national. Lorsqu'un schéma directeur d'accessibilité-agenda d'accessibilité programmée concerne un
 réseau de transport public local desservant plusieurs départements, la décision de validation relative aux éléments prévus à
@@ -72,7 +73,6 @@ de six mois en cas de rejet d'un premier agenda.
 
 	  - Décret n°95-260 du 8 mars 1995 - art. 2 (VD)
 	  - Arrêté du 20 juillet 2015 - art. 1 (V)
-	  - Code des transports - art. L1112-2-1 (M)
 	  - Code des transports - art. L1112-2-4 (V)
 	  - Code des transports - art. L1821-1-1 (V)
 	  - Code des transports - art. R1112-11 (V)
@@ -86,11 +86,13 @@ de six mois en cas de rejet d'un premier agenda.
 	**Cite**:
 
 	  - ORDONNANCE n°2014-1090 du 26 septembre 2014
-	  - Code de la construction et de l'habitation. - art. L111-7-3 (V)
+	  - Code de la construction et de l'habitation. - art. L111-7-3
 	  - Code des transports - art. L1112-1
-	  - Code des transports - art. L1112-2
+	  - Code des transports - art. L1112-2 (V)
+	  - Code des transports - art. L1112-2-1 (V)
 	  - Code des transports - art. L1112-4
+	  - Code des transports - art. L3111-17 (V)
 
 	**Modifié par**:
 
-	  - Loi n°2015-988 du 5 août 2015 - art. 5
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
