--- a/01. PARTIE LEGISLATIVE/Article L1213-3-1 - 28528787.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-3-1 - 28528787.md
@@ -15,11 +15,18 @@ mise en place de pôles d'échange.
 Il prévoit les mesures de nature à assurer une information des usagers sur l'ensemble de l'offre de transports, à permettre
 la mise en place de tarifs donnant accès à plusieurs modes de transport et la distribution des billets correspondants.
 
+Le schéma régional de l'intermodalité comporte un schéma régional des gares routières, qui indique la localisation des gares
+routières et définit les éléments principaux de leurs cahiers des charges. 
+
+Dans le respect des prescriptions du schéma régional des gares routières, les collectivités territoriales compétentes en
+matière d'urbanisme ou de voirie ou leurs subdélégataires coordonnent les actions d'aménagement des gares routières, dont les
+maîtres d'ouvrage peuvent être publics ou privés.
+
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-58 du 27 janvier 2014 - art. 6
+	  - Loi n°2015-990 du 6 août 2015 - art. 10
 
 	**Cité par**:
 
@@ -30,4 +37,4 @@ la mise en place de tarifs donnant accès à plusieurs modes de transport et la 
 
 	**Cite**:
 
-	  - Code des transports - art. L1221-1 (V)
+	  - Code des transports - art. L1221-1
