--- a/01. PARTIE LEGISLATIVE/Article L1331-1 - 23085488.md
+++ b/01. PARTIE LEGISLATIVE/Article L1331-1 - 23085488.md
@@ -1,14 +1,19 @@
 # Article L1331-1
 
-Un décret en Conseil d'Etat détermine les conditions particulières d'application de l'article L. 1262-4 du code du travail
-aux salariés des entreprises de transport routier ou fluvial établies hors de France qui, à la demande de leur employeur,
-exécutent des opérations de cabotage pendant une durée limitée sur le sol français.
+I.-Un décret en Conseil d'Etat fixe les conditions dans lesquelles une attestation établie par les entreprises de transport
+mentionnées à l'article L. 1321-1 du présent code qui détachent des salariés roulants ou navigants se substitue à la
+déclaration mentionnée au I de l'article L. 1262-2-1 du code du travail. 
+
+II.-Un décret en Conseil d'Etat fixe la période pendant laquelle est assurée la liaison entre les agents mentionnés à
+l'article L. 8271-1-2 du code du travail et le représentant sur le territoire national désigné, en application du II de
+l'article L. 1262-2-1 du même code, par les entreprises de transport mentionnées à l'article L. 1321-1 du présent code qui
+détachent des salariés roulants ou navigants.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 33 (V), alinéa 15, paragraphe IV
+	  - Loi n°2015-990 du 6 août 2015 - art. 281
 
 	**Cité par**:
 
@@ -20,7 +25,9 @@ exécutent des opérations de cabotage pendant une durée limitée sur le sol fr
 
 	**Cite**:
 
-	  - Code du travail - art. L1262-4
+	  - Code du travail - art. L1262-2-1
+	  - Code du travail - art. L8271-1-2
+	  - Code des transports - art. L1321-1 (V)
 
 	**Codifié par**:
 
