--- a/01. PARTIE LEGISLATIVE/Article L1821-8-1 - 29787075.md
+++ b/01. PARTIE LEGISLATIVE/Article L1821-8-1 - 29787075.md
@@ -14,22 +14,21 @@ remplacés par les mots : " de l'article L. 213-4 du code du travail applicable 
 4° Au troisième alinéa de l'article L. 1321-7, les mots : " de l'article L. 3122-31 du code du travail " sont remplacés par
 les mots : " de l'article L. 213-3 du code du travail applicable à Mayotte " ; 
 
-5° Les dispositions de la section 6 du chapitre Ier du titre II du livre III ne sont pas applicables ; 
-
-6° A l'article L. 1331-1, les mots : " de l'article L. 1262-4 du code du travail " sont remplacés par les mots : " de
-l'article L. 330-4 du code du travail applicable à Mayotte ".
+5° Les dispositions de la section 6 du chapitre Ier du titre II du livre III ne sont pas applicables.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2014-1380 du 21 novembre 2014 - art. 1
+	  - Loi n°2015-990 du 6 août 2015 - art. 281
 
 	**Cite**:
 
-	  - Code du travail applicable à Mayotte. - art. L213-3 (V)
-	  - Code des transports - art. L1321-4 (V)
-	  - Code des transports - art. L1321-5 (V)
-	  - Code des transports - art. L1321-6 (V)
-	  - Code des transports - art. L1321-7 (V)
-	  - Code des transports - art. L1331-1 (V)
+	  - Code du travail - art. L3122-31 (V)
+	  - Code du travail - art. L3122-34 (V)
+	  - Code du travail applicable à Mayotte. - art. L213-3
+	  - Code du travail applicable à Mayotte. - art. L213-4 (V)
+	  - Code des transports - art. L1321-4
+	  - Code des transports - art. L1321-5
+	  - Code des transports - art. L1321-6
+	  - Code des transports - art. L1321-7
