--- a/01. PARTIE LEGISLATIVE/Article L2111-10-1 - 29332330.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-10-1 - 29332330.md
@@ -6,16 +6,17 @@ suivants :
 1° Les investissements de maintenance du réseau ferré national sont financés selon des modalités prévues par le contrat
 mentionné au premier alinéa de l'article L. 2111-10 ; 
 
-2° Les investissements de développement du réseau ferré national sont évalués au regard de ratios définis par le Parlement. 
+2° Les investissements de développement du réseau ferré national sont évalués au regard du ratio défini comme le rapport
+entre la dette financière nette et la marge opérationnelle de SNCF Réseau. 
 
-En cas de dépassement d'un de ces ratios, les projets d'investissements de développement sont financés par l'Etat, les
-collectivités territoriales ou tout autre demandeur. 
+En cas de dépassement du niveau plafond de ce ratio, les projets d'investissements de développement sont financés par l'Etat,
+les collectivités territoriales ou tout autre demandeur. 
 
-En l'absence de dépassement d'un de ces ratios, les projets d'investissements de développement font l'objet, de la part de
-l'Etat, des collectivités territoriales ou de tout autre demandeur, de concours financiers propres à éviter toute conséquence
-négative sur les comptes de SNCF Réseau au terme de la période d'amortissement des investissements projetés. 
+En l'absence de dépassement du niveau plafond de ce ratio, les projets d'investissements de développement font l'objet, de la
+part de l'Etat, des collectivités territoriales ou de tout autre demandeur, de concours financiers propres à éviter toute
+conséquence négative sur les comptes de SNCF Réseau au terme de la période d'amortissement des investissements projetés. 
 
-Les règles de financement et les ratios mentionnés au premier alinéa et au 2° visent à garantir une répartition durable et
+Les règles de financement et le ratio mentionnés au premier alinéa et au 2° visent à garantir une répartition durable et
 soutenable du financement du système de transport ferroviaire entre gestionnaires d'infrastructure et entreprises
 ferroviaires, en prenant en compte les conditions de la concurrence intermodale. 
 
@@ -25,6 +26,9 @@ part contributive de SNCF Réseau, au regard notamment des stipulations du contr
 2111-10. Cet avis porte notamment sur la pertinence des prévisions de recettes nouvelles, en particulier au regard de leur
 soutenabilité pour les entreprises ferroviaires, ainsi que sur l'adéquation du niveau de ces recettes avec celui des dépenses
 d'investissement projetées.
+
+Les modalités d'application du présent article, notamment le mode de calcul des éléments du ratio mentionné au 2° et son
+niveau plafond, qui ne peut excéder 18, sont définies par décret.
 
 **Liens relatifs à cet article**
 
@@ -37,10 +41,10 @@ d'investissement projetées.
 	  - Décret n°2017-443 du 30 mars 2017 - art. 2 (V)
 	  - Code des transports - art. L2111-3 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 6
+	  - Loi n°2015-990 du 6 août 2015 - art. 193
 
 	**Cite**:
 
-	  - Code des transports - art. L2111-10 (VD)
+	  - Code des transports - art. L2111-10
