--- a/01. PARTIE LEGISLATIVE/Article L2241-1 - 23084158.md
+++ b/01. PARTIE LEGISLATIVE/Article L2241-1 - 23084158.md
@@ -22,7 +22,9 @@ circulation, l'arrêt et le stationnement des véhicules dans les cours des gare
 
 2° Les agents de police judiciaire adjoints ; 
 
-3° Les agents chargés de la surveillance de la voie publique mentionnés au 3° de l'article L. 130-4 du code de la route.
+3° Les agents chargés de la surveillance de la voie publique mentionnés au 3° de l'article L. 130-4 du code de la route ; 
+
+4° Les agents assermentés mentionnés au 13° de l'article L. 130-4 du code de la route.
 
 **Liens relatifs à cet article**
 
@@ -32,7 +34,7 @@ circulation, l'arrêt et le stationnement des véhicules dans les cours des gare
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 21
+	  - Loi n°2015-990 du 6 août 2015 - art. 20
 
 	**Cité par**:
 
@@ -59,5 +61,5 @@ circulation, l'arrêt et le stationnement des véhicules dans les cours des gare
 
 	**Cite**:
 
-	  - Code de la route. - art. L130-4
-	  - Code des transports - art. L2251-1-1 (VD)
+	  - Code de la route. - art. L130-4 (V)
+	  - Code des transports - art. L2251-1-1
