--- a/01. PARTIE LEGISLATIVE/Article L3111-1 - 23084008.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-1 - 23084008.md
@@ -1,17 +1,19 @@
 # Article L3111-1
 
-Les services non urbains, réguliers et à la demande, sont organisés par le département, à l'exclusion des liaisons d'intérêt
-régional ou national. Ils sont assurés, dans les conditions prévues aux articles L. 1221-1 à L. 1221-11, par le département
-ou par les entreprises publiques ou privées qui ont passé avec lui une convention à durée déterminée. 
+Sans préjudice des articles L. 3111-17 et L. 3421-2, les services non urbains, réguliers et à la demande, sont organisés par
+le département, à l'exclusion des liaisons d'intérêt régional ou national. Ils sont assurés, dans les conditions prévues aux
+articles L. 1221-1 à L. 1221-11, par le département ou par les entreprises publiques ou privées qui ont passé avec lui une
+convention à durée déterminée. 
 
 Ces services sont inscrits au plan départemental établi et tenu à jour par le département, après avis des communes
 concernées.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 29 (VT), alinéa 6
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
+	  - Loi n°2015-991 du 7 août 2015 - art. 15 (V)
 
 	**Cité par**:
 
@@ -24,7 +26,9 @@ concernées.
 
 	**Cite**:
 
-	  - Code des transports - art. L1221-1 (V)
+	  - Code des transports - art. L1221-1
+	  - Code des transports - art. L3111-17 (V)
+	  - Code des transports - art. L3421-2 (V)
 
 	**Codifié par**:
 
