--- a/01. PARTIE LEGISLATIVE/Article L3111-3 - 23084004.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-3 - 23084004.md
@@ -1,19 +1,20 @@
 # Article L3111-3
 
-Sans préjudice de l'article L. 3421-2, les services réguliers non urbains d'intérêt national sont assurés par les entreprises
-publiques ou privées qui ont passé avec l'Etat une convention à durée déterminée dans les conditions prévues aux articles L.
-1221-3 à L. 1221-6. Ces conventions sont soumises à l'avis préalable des régions et départements concernés.
+Sans préjudice des articles L. 3111-17 et L. 3421-2, les services réguliers non urbains d'intérêt national sont assurés par
+les entreprises publiques ou privées qui ont passé avec l'Etat une convention à durée déterminée dans les conditions prévues
+aux articles L. 1221-3 à L. 1221-6. Ces conventions sont soumises à l'avis préalable des régions et départements concernés.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 29 (VT), alinéa 8
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
 
 	**Cite**:
 
 	  - Code des transports - art. L1221-3 (V)
-	  - Code des transports - art. L3421-2 (V)
+	  - Code des transports - art. L3111-17 (V)
+	  - Code des transports - art. L3421-2
 
 	**Codifié par**:
 
