--- a/01. PARTIE LEGISLATIVE/Article L3120-2 - 29530537.md
+++ b/01. PARTIE LEGISLATIVE/Article L3120-2 - 29530537.md
@@ -11,8 +11,8 @@ préalable ;
 2° S'arrêter, stationner ou circuler sur la voie ouverte à la circulation publique en quête de clients ; 
 
 3° Stationner sur la voie ouverte à la circulation publique, à l'abord des gares et des aérogares ou, le cas échéant, dans
-l'enceinte de celles-ci, au delà d'une durée, fixée par décret, précédant la prise en charge de clients, sauf s'il justifie
-d'une réservation préalable ou d'un contrat avec le client final. 
+l'enceinte de celles-ci, au delà d'une durée, fixée par décret, précédant la prise en charge                     du client
+qui a effectué une réservation préalable. 
 
 III.-Sont interdits aux personnes réalisant des prestations mentionnées à l'article L. 3120-1 et aux intermédiaires auxquels
 elles ont recours : 
@@ -42,11 +42,11 @@ même 1°.
 	  - Code des transports - art. R3120-2 (V)
 	  - Code des transports - art. R3124-11 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-1104 du 1er octobre 2014 - art. 10
+	  - Loi n°2015-990 du 6 août 2015 - art. 19
 
 	**Cite**:
 
-	  - Code des transports - art. L3120-1 (V)
-	  - Code des transports - art. L3121-1 (V)
+	  - Code des transports - art. L3120-1
+	  - Code des transports - art. L3121-1
