--- a/01. PARTIE LEGISLATIVE/Article L3121-5 - 23083922.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-5 - 23083922.md
@@ -13,8 +13,7 @@ l'autorisation de stationnement est demandée, et ne pas être déjà titulaires
 Seuls peuvent se voir délivrer une autorisation de stationnement les titulaires d'une carte professionnelle en cours de
 validité, délivrée par le représentant de l'Etat dans le département où l'autorisation de stationnement est délivrée. En
 outre, la délivrance est effectuée en priorité aux titulaires qui peuvent justifier de l'exercice de l'activité de conducteur
-de taxi pendant une période minimale de deux ans au cours des cinq ans précédant la date de l'inscription sur liste
-d'attente.
+de taxi pendant une période minimale de deux ans au cours des cinq ans précédant la date de délivrance.
 
 **Liens relatifs à cet article**
 
@@ -24,11 +23,13 @@ d'attente.
 
 	**Cite**:
 
-	  - Loi n°2014-1104 du 1er octobre 2014 (V)
+	  - Loi n°2014-1104 du 1er octobre 2014
+	  - Code des transports - art. L3121-10 (V)
 
 	**Modifié par**:
 
-	  - Loi n°2014-1104 du 1er octobre 2014 - art. 6
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 6 (V)
+	  - Loi n°2015-990 du 6 août 2015 - art. 19
 
 	**Cité par**:
 
