--- a/01. PARTIE LEGISLATIVE/Article L3421-2 - 23083651.md
+++ b/01. PARTIE LEGISLATIVE/Article L3421-2 - 23083651.md
@@ -1,24 +1,14 @@
 # Article L3421-2
 
-L'Etat peut autoriser, pour une durée déterminée, les entreprises de transport public routier de personnes à assurer des
-dessertes intérieures régulières d'intérêt national, à l'occasion d'un service régulier de transport routier international de
-voyageurs, à condition que l'objet principal de ce service soit le transport de voyageurs entre des arrêts situés dans des
-Etats différents.
+Les entreprises de transport public routier de personnes non établies en France peuvent, à l'occasion d'un service régulier
+de transport routier international de voyageurs et sous réserve que l'objet principal de ce service soit le transport de
+voyageurs entre des arrêts situés dans des Etats différents, assurer des services librement organisés dans les conditions
+définies à la section 3 du chapitre Ier du titre Ier du livre Ier de la présente troisième partie. 
 
-L'Etat peut limiter ou, le cas échéant, interdire ces dessertes intérieures si la condition précitée n'est pas remplie ou si
-leur existence compromet l'équilibre économique d'un contrat de service public de transport de personnes. Il peut être saisi
-à cette fin par une collectivité intéressée. 
-
-Les dispositions du présent article sont applicables en région Ile-de-France. 
-
-Le décret en Conseil d'Etat prévu à l'article L. 3421-10 fixe les conditions d'application du présent article et notamment
-les conditions dans lesquelles les autorités organisatrices de transport concernées sont consultées.
+Le décret en Conseil d'Etat prévu à l'article L. 3111-25 précise les modalités d'application du présent article, notamment
+les critères d'appréciation du caractère principal du service international et les conditions de sa vérification.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 29-1 (Ab), art. 46 (M), ecqc l'application de l'article 29-1 de la loi n°82-1153 en Ile-de-France
 
 	**Cité par**:
 
@@ -38,9 +28,13 @@ les conditions dans lesquelles les autorités organisatrices de transport concer
 	  - Code général des collectivités territoriales - art. L5216-5 (VT)
 	  - Code général des collectivités territoriales - art. L5217-4 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
+
 	**Cite**:
 
-	  - Code des transports - art. L3421-10 (V)
+	  - Code des transports - art. L3111-25 (VT)
 
 	**Codifié par**:
 
