--- a/01. PARTIE LEGISLATIVE/Article L3452-7 - 23083559.md
+++ b/01. PARTIE LEGISLATIVE/Article L3452-7 - 23083559.md
@@ -1,15 +1,11 @@
 # Article L3452-7
 
-Est puni de 15 000 € d'amende le fait, pour une entreprise de transport routier de marchandises non résidente ou, dans le cas
-de services occasionnels, pour une entreprise de transport de personnes non résidente, admise à effectuer des transports
-intérieurs dits de cabotage, de réaliser ces transports sans respecter les dispositions des articles L. 3421-1 et L. 3421-3 à
-L. 3421-5.
+Est puni de 15 000 € d'amende le fait, pour une entreprise de transport routier de marchandises non établie en France ou,
+dans le cas de services occasionnels ou réguliers, pour une entreprise de transport de personnes non établie en France,
+admise à effectuer des transports intérieurs dits de cabotage, de réaliser ces transports sans respecter les dispositions des
+articles L. 3421-1 à L. 3421-5.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°52-401 du 14 avril 1952 - art. 25 (Ab), alinéa 20, paragraphe II
 
 	**Cité par**:
 
@@ -18,10 +14,13 @@ L. 3421-5.
 	  - Code des transports - art. L3521-5 (V)
 	  - Code des transports - art. L3551-5 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
+
 	**Cite**:
 
-	  - Code des transports - art. L3421-1 (VT)
-	  - Code des transports - art. L3421-3 (V)
+	  - Code des transports - art. L3421-1 (V)
 
 	**Codifié par**:
 
