--- a/01. PARTIE LEGISLATIVE/Article L4463-5 - 23082342.md
+++ b/01. PARTIE LEGISLATIVE/Article L4463-5 - 23082342.md
@@ -1,16 +1,18 @@
 # Article L4463-5
 
-Est punie de 7 500 € d'amende la méconnaissance des dispositions de l'article L. 4413-1 relatives au cabotage.
+Est punie de 7 500 € d'amende la méconnaissance des dispositions de l'article L. 4413-1 relatives au cabotage et de l'article
+L. 4454-3 relatives à la location transfrontalière.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code du domaine public fluvial et de la navigat... - art. 210 (Ab), II
+	  - Loi n°2015-990 du 6 août 2015 - art. 285
 
 	**Cite**:
 
-	  - Code des transports - art. L4413-1 (V)
+	  - Code des transports - art. L4413-1
+	  - Code des transports - art. L4454-3 (V)
 
 	**Codifié par**:
 
