--- a/01. PARTIE LEGISLATIVE/Article L1221-3 - 23085937.md
+++ b/01. PARTIE LEGISLATIVE/Article L1221-3 - 23085937.md
@@ -1,22 +1,13 @@
 # Article L1221-3
 
-Sans préjudice des articles L. 2121-12 et L. 3421-2, l'exécution des services de transport public de personnes réguliers et à
-la demande est assurée, pour une durée limitée dans les conditions prévues par le règlement (CE) n° 1370/2007 du Parlement
-européen et du Conseil du 23 octobre 2007 relatif aux services publics de transports de voyageurs par chemin de fer et par
-route et abrogeant les règlements (CEE) n° 1191/69 et 1107/70 du Conseil pour les services qui en relèvent, soit en régie par
-une personne publique sous forme d'un service public industriel et commercial, soit par une entreprise ayant passé à cet
-effet une convention avec l'autorité organisatrice.
+Sans préjudice des articles L. 2121-12, L. 3111-17 et L. 3421-2, l'exécution des services de transport public de personnes
+réguliers et à la demande est assurée, pour une durée limitée dans les conditions prévues par le règlement (CE) n° 1370/2007
+du Parlement européen et du Conseil du 23 octobre 2007 relatif aux services publics de transports de voyageurs par chemin de
+fer et par route et abrogeant les règlements (CEE) n° 1191/69 et 1107/70 du Conseil pour les services qui en relèvent, soit
+en régie par une personne publique sous forme d'un service public industriel et commercial, soit par une entreprise ayant
+passé à cet effet une convention avec l'autorité organisatrice.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°79-475 du 19 juin 1979 - art. 4 (VT), alinéas 1 et 2
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 7 (VT), alinéa 3, phrases 2 à 5, paragraphe II
-
-	**Liens**:
-
-	  - RECTIFICATION: Ordonnance n°2010-1307 du 28 octobre 2010, v. init.
 
 	**Cité par**:
 
@@ -27,7 +18,7 @@ effet une convention avec l'autorité organisatrice.
 	  - Code des transports - art. L1241-5 (VD)
 	  - Code des transports - art. L1851-1 (V)
 	  - Code des transports - art. L3111-2 (Ab)
-	  - Code des transports - art. L3111-3 (M)
+	  - Code des transports - art. L3111-3 (V)
 	  - Code des transports - art. L6412-4 (V)
 	  - Code des transports - art. R1221-1 (V)
 	  - Code des transports - art. R1632-4 (V)
@@ -35,11 +26,15 @@ effet une convention avec l'autorité organisatrice.
 	  - Code des transports - art. R3113-10 (VD)
 	  - Code du tourisme. - art. L342-8 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
+
 	**Cite**:
 
-	  - Code des transports - art. L2121-12 (V)
-	  - Code des transports - art. L3421-2 (V)
-	  - règlement (CE) n°1370/2007
+	  - Code des transports - art. L2121-12
+	  - Code des transports - art. L3111-17 (V)
+	  - Code des transports - art. L3421-2
 
 	**Codifié par**:
 
