--- a/01. PARTIE LEGISLATIVE/Article L2131-2 - 23084535.md
+++ b/01. PARTIE LEGISLATIVE/Article L2131-2 - 23084535.md
@@ -1,14 +1,10 @@
 # Article L2131-2
 
-L'Autorité de régulation des activités ferroviaires établit chaque année un rapport d'activité. Il comporte toutes
-recommandations utiles. Il est adressé au Gouvernement et au Parlement.
+L'Autorité de régulation des activités ferroviaires établit chaque année un rapport sur son activité dans le domaine
+ferroviaire. Il comporte toutes recommandations utiles. Il est adressé au Gouvernement et au Parlement.
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
