--- a/01. PARTIE LEGISLATIVE/Article L2132-1 - 23084521.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-1 - 23084521.md
@@ -2,21 +2,18 @@
 
 L'Autorité de régulation des activités ferroviaires comprend un collège et une commission des sanctions chargée de prononcer
 les sanctions prévues aux articles L. 2135-7 et L. 2135-8. Le collège est composé de sept membres nommés par décret en raison
-de leurs compétences économiques, juridiques ou techniques dans le domaine ferroviaire, ou pour leur expertise en matière de
-concurrence, notamment dans le domaine des industries de réseau. Leur mandat est de six ans non renouvelable. 
+de leurs compétences économiques, juridiques ou techniques dans le domaine des services et infrastructures de transport
+terrestre, ou pour leur expertise en matière de concurrence, notamment dans le domaine des industries de réseau. Leur mandat
+est de six ans non renouvelable. 
 
 A l'exception des décisions relatives aux sanctions, les attributions confiées à l'Autorité de régulation des activités
 ferroviaires sont exercées par le collège.
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cité par**:
 
