--- a/01. PARTIE LEGISLATIVE/Article L3111-2 - 23084006.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-2 - 23084006.md
@@ -1,21 +1,27 @@
 # Article L3111-2
 
-Les services réguliers non urbains d'intérêt régional sont organisés par la région. Ils sont inscrits au plan régional établi
-et tenu à jour par la région, après avis des départements et des autorités compétentes pour l'organisation des transports
-urbains. 
+Sans préjudice des articles L. 3111-17 et L. 3421-2, les services réguliers non urbains d'intérêt régional sont organisés par
+la région. Ils sont inscrits au plan régional établi et tenu à jour par la région, après avis des départements et des
+autorités compétentes pour l'organisation des transports urbains. 
 
 Les services d'intérêt régional sont assurés par les entreprises publiques ou privées qui ont passé avec la région et les
 départements concernés une convention à durée déterminée dans les conditions prévues aux articles L. 1221-3 à L. 1221-6.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 29 (VT), alinéa 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
+
+	**Abrogé par**:
+
+	  - Loi n°2015-991 du 7 août 2015 - art. 15 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L1221-3 (V)
+	  - Code des transports - art. L1221-3
+	  - Code des transports - art. L3111-17 (V)
+	  - Code des transports - art. L3421-2 (V)
 
 	**Codifié par**:
 
