--- a/01. PARTIE LEGISLATIVE/Article L3121-11 - 23083905.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-11 - 23083905.md
@@ -2,12 +2,9 @@
 
 L'autorisation de stationnement mentionnée à l'article L. 3121-1 du présent code permet aux conducteurs de taxis d'arrêter
 leur véhicule, de le stationner ou de le faire circuler sur la voie ouverte à la circulation publique en quête de clientèle
-dans leur commune de rattachement, dans une commune faisant partie d'un service commun de taxis comprenant leur commune de
-rattachement ou dans le ressort de l'autorisation de stationnement délivrée dans les conditions prévues à l'article L. 3642-2
-du code général des collectivités territoriales ou à l'article L. 5211-9-2 du même code. En dehors du ressort de
-l'autorisation de stationnement, les conducteurs de taxis sont soumis à l'article L. 3120-2 du présent code, notamment
-s'agissant de la prise en charge de la clientèle sur la voie ouverte à la circulation publique sous réserve de justification
-d'une réservation préalable.
+dans le ressort de l'autorisation défini par l'autorité compétente. En dehors du ressort de l'autorisation de stationnement,
+les conducteurs de taxis sont soumis à l'article L. 3120-2 du présent code, notamment s'agissant de la prise en charge de la
+clientèle sur la voie ouverte à la circulation publique sous réserve de justification d'une réservation préalable.
 
 **Liens relatifs à cet article**
 
@@ -22,9 +19,9 @@ d'une réservation préalable.
 
 	**Modifié par**:
 
-	  - Loi n°2014-1104 du 1er octobre 2014 - art. 10
+	  - Loi n°2015-990 du 6 août 2015 - art. 19
 
 	**Cite**:
 
-	  - Code général des collectivités territoriales - art. L3642-2
-	  - Code général des collectivités territoriales - art. L5211-9-2
+	  - Code des transports - art. L3120-2 (V)
+	  - Code des transports - art. L3121-1 (V)
