--- a/01. PARTIE LEGISLATIVE/Article L3451-2 - 23083582.md
+++ b/01. PARTIE LEGISLATIVE/Article L3451-2 - 23083582.md
@@ -1,21 +1,21 @@
 # Article L3451-2
 
-Le véhicule de transport routier en infraction aux dispositions prévues par les 1° et 5° de l'article L. 3452-6 et par
+Le véhicule de transport routier en infraction aux dispositions prévues par les 1°, 5° ou 6° de l'article L. 3452-6 et par
 l'article L. 3452-7 est immobilisé dans les conditions prévues aux articles L. 325-1 à L. 325-3 du code de la route par les
 agents mentionnés au I de l'article L. 1451-1.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°52-401 du 14 avril 1952 - art. 25 (Ab), alinéa 20, paragraphe III
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
 
 	**Cite**:
 
-	  - Code de la route. - art. L325-1 (V)
-	  - Code des transports - art. L1451-1 (V)
-	  - Code des transports - art. L3452-6 (VT)
-	  - Code des transports - art. L3452-7 (V)
+	  - Code de la route. - art. L325-1
+	  - Code des transports - art. L1451-1
+	  - Code des transports - art. L3452-6
+	  - Code des transports - art. L3452-7
 
 	**Cité par**:
 
