--- a/01. PARTIE LEGISLATIVE/Article L3452-5-1 - 23376739.md
+++ b/01. PARTIE LEGISLATIVE/Article L3452-5-1 - 23376739.md
@@ -1,15 +1,15 @@
 # Article L3452-5-1
 
-Les modalités selon lesquelles, en application des règlements cités à l'article L. 3452-5, un transporteur non résident qui a
-commis en France, à l'occasion d'un transport de cabotage, une infraction grave au droit de l'Union européenne dans le
-domaine des transports routiers peut faire l'objet d'une interdiction temporaire de cabotage sur le territoire français sont
-fixées par le décret prévu à l'article L. 3452-5-2.
+Les modalités selon lesquelles, en application des règlements cités à l'article L. 3452-5, un transporteur non établi en
+France qui a commis en France, à l'occasion d'un transport de cabotage, une infraction grave au droit de l'Union européenne
+dans le domaine des transports routiers peut faire l'objet d'une interdiction temporaire de cabotage sur le territoire
+français sont fixées par le décret prévu à l'article L. 3452-5-2.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2011-12 du 5 janvier 2011 - art. 10
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
 
 	**Cite**:
 
