--- a/01. PARTIE LEGISLATIVE/Article L3551-5 - 23083494.md
+++ b/01. PARTIE LEGISLATIVE/Article L3551-5 - 23083494.md
@@ -1,12 +1,22 @@
 # Article L3551-5
 
-Le titre II du livre IV de la présente partie n'est pas applicable à Saint-Pierre-et-Miquelon.
+La section 3 du chapitre Ier du titre Ier du livre Ier et le titre II du livre IV de la présente partie, le 5° de l'article
+L. 3452-6 et les articles L. 3452-7 et L. 3452-8 ne sont pas applicables à Saint-Pierre-et-Miquelon.
 
 **Liens relatifs à cet article**
 
 	**Cité par**:
 
 	  - Loi n°2015-990 du 6 août 2015 - art. 18 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
+
+	**Cite**:
+
+	  - Code des transports - art. L3452-6 (VT)
+	  - Code des transports - art. L3452-7 (V)
 
 	**Codifié par**:
 
