--- a/01. PARTIE LEGISLATIVE/Article L4461-1 - 23082493.md
+++ b/01. PARTIE LEGISLATIVE/Article L4461-1 - 23082493.md
@@ -1,11 +1,13 @@
 # Article L4461-1
 
 Les personnes qui effectuent un transport fluvial de marchandises présentent à toutes réquisitions des agents mentionnés à
-l'article L. 4272-1 :
+l'article L. 4272-1 : 
 
 1° Un document leur permettant de déterminer la nature juridique du transport effectué ; 
 
-2° Le cas échéant, leurs connaissements et lettres de voiture. 
+2° Le cas échéant, leurs connaissements et lettres de voiture ; 
+
+3° La confirmation de contrat de transport prévue à l'article L. 4451-7. 
 
 Elles sont tenues de déclarer aux agents commissionnés à cet effet la nature et le poids de leur chargement. 
 
@@ -14,19 +16,18 @@ d'Etat.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°72-1202 du 23 décembre 1972 - art. 22 (Ab)
-	  - Code du domaine public fluvial et de la navigat... - art. 189-10 (Ab), art. 197 (Ab)
+	  - Loi n°2015-990 du 6 août 2015 - art. 284
 
 	**Cite**:
 
-	  - Code des transports - art. L4272-1 (V)
+	  - Code des transports - art. L4272-1
 
 	**Cité par**:
 
 	  - Code des transports - art. L4451-7 (V)
-	  - Code des transports - art. L4463-1 (M)
+	  - Code des transports - art. L4463-1 (V)
 	  - Code des transports - art. R4461-1 (V)
 	  - Code des transports - art. R4461-2 (V)
 
