--- a/01. PARTIE LEGISLATIVE/Article L4463-1 - 23082393.md
+++ b/01. PARTIE LEGISLATIVE/Article L4463-1 - 23082393.md
@@ -1,13 +1,13 @@
 # Article L4463-1
 
-Les manquements aux obligations prévues aux deuxième, troisième et quatrième alinéas de l'article L. 4461-1 sont assimilés
-aux contraventions de grande voirie et punis des mêmes peines.
+Les manquements aux obligations prévues aux 1° à 3° et à l'avant-dernier alinéa  de l'article L. 4461-1 sont assimilés aux
+contraventions de grande voirie et punis des mêmes peines.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code du domaine public fluvial et de la navigat... - art. 198 (Ab)
+	  - Loi n°2015-990 du 6 août 2015 - art. 284
 
 	**Cite**:
 
