--- a/01. PARTIE LEGISLATIVE/Article L5542-6-1 - 27719543.md
+++ b/01. PARTIE LEGISLATIVE/Article L5542-6-1 - 27719543.md
@@ -2,15 +2,20 @@
 
 A bord des navires effectuant des voyages internationaux, le capitaine détient un exemplaire d'un contrat type, ainsi que les
 éléments des conventions et accords collectifs qui portent sur les matières contrôlées au titre des inspections par l'Etat du
-port, dans une ou plusieurs versions en langue étrangère, dont au moins une en anglais.
+port, dans une ou plusieurs versions en langue étrangère, dont au moins une en anglais. 
+
+A bord des navires effectuant une navigation maritime commerciale, soumis à la convention du travail maritime, 2006, de
+l'Organisation internationale du travail, le capitaine tient, le cas échéant par voie électronique, à la disposition des gens
+de mer, un exemplaire de l'accord conclu le 19 mai 2008 par les associations des armateurs de la Communauté européenne et la
+Fédération européenne des travailleurs des transports concernant cette convention.
 
 **Liens relatifs à cet article**
-
-	**Créé par**:
-
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 25 (V)
 
 	**Cité par**:
 
 	  - Décret n°2015-918 du 27 juillet 2015 - art. 2 (VD)
 	  - Code des transports - art. L5621-12 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 286
